--- a/index.html
+++ b/index.html
@@ -273,21 +273,23 @@
     </div>
 
     <!-- SESSAO CARDS DESTAQUE INICIO -->
-    <div class="row mx-auto mb-5">
-      <div class="bg-destaque col-12 col-md-6 col-xl-4">
-        <div class="card rounded-0">
-          <div class="destaque">
-            <img
-              class=""
-              src="./assets/Mobile/eventos/evento-terca-lg.jpg"
-              alt="homem preto de blaze azul, camisa branca e sorrindo"
-            />
-            <div class="card-body">
-              <h5 class="card-title fs-3">Dia 23/04</h5>
-              <p class="card-text fs-5">
-                Feriado de São Jorge, venha nos prestigiar com a sua presença!
-                Teremos feijoada a partir das 16h.
-              </p>
+    <div class="bg-destaque">
+      <div class="container row mx-auto mb-5">
+        <div class="col-12 col-md-6 col-xl-4">
+          <div class="card rounded-0">
+            <div class="destaque">
+              <img
+                class=""
+                src="./assets/Mobile/eventos/evento-terca-lg.jpg"
+                alt="homem preto de blaze azul, camisa branca e sorrindo"
+              />
+              <div class="card-body">
+                <h5 class="card-title fs-3">Dia 23/04</h5>
+                <p class="card-text fs-5">
+                  Feriado de São Jorge, venha nos prestigiar com a sua presença!
+                  Teremos feijoada a partir das 16h.
+                </p>
+              </div>
             </div>
           </div>
         </div>
