--- a/index.html
+++ b/index.html
@@ -105,16 +105,6 @@
             src="./assets/Mobile/produtos/domingo.jpg"
             alt="Modelo feminina de pele morena com casaco rosa com fundo lilás"
           />
-          <img
-            class="img-fluid d-none d-md-block d-xl-none"
-            src="./assets/Tablet/banner1-tablet.png"
-            alt="Modelo feminina de pele morena com casaco rosa com fundo lilás"
-          />
-          <img
-            class="img-fluid d-none d-xl-block"
-            src="./assets/Desktop/banner1-desktop.jpg"
-            alt="Modelo feminina de pele morena com casaco rosa com fundo lilás"
-          />
         </div>
         <div class="carousel-item">
           <img
@@ -122,20 +112,6 @@
             src="./assets/Mobile/produtos/chopp-delivery.jpg"
             alt="Modelo feminina de pele negra com casaco na cor preta com fundo salmão"
           />
-          <img
-            class="img-fluid d-none d-md-block d-xl-none"
-            src="./assets/Tablet/banner2-tablet.png"
-            alt="Modelo feminina de pele morennegra com casaco na cor preta com fundo salmão"
-          />
-          <img
-            class="img-fluid d-none d-xl-block"
-            src="./assets/Desktop/banner2-desktop.png"
-            alt="Modelo feminina de pele morennegra com casaco na cor preta com fundo salmão"
-          />
-          <div class="carousel-caption">
-            <h5>COLEÇÃO ATEMPORAL</h5>
-            <p>Estilo e qualidade para durar.</p>
-          </div>
         </div>
         <div class="carousel-item">
           <img
@@ -235,6 +211,11 @@
           <button type="button" class="btn btn-dark">Sobremesas</button>
         </a>
       </div>
+      <div class="col-6">
+        <a href="#manta">
+          <button type="button" class="btn btn-dark">Manta Recheada</button>
+        </a>
+      </div>
     </div>
 
     <!-- SESSAO CARDS Botoes Bebidas -->
@@ -267,12 +248,12 @@
       </div>
     </div>
 
-    <div class="titulo-destaque" id="evento">
+    <!-- <div class="titulo-destaque" id="evento">
       <img src="./assets/logo-seu-vigario-base.png" alt="logo seu vigario" />
       <h2><span>Destaque</span> da Semana<span>.</span></h2>
     </div>
 
-    <!-- SESSAO CARDS DESTAQUE INICIO -->
+    
     <div class="bg-destaque">
       <div class="container row mx-auto mb-5">
         <div class="col-12 col-md-6 col-xl-4">
@@ -294,7 +275,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div id="promo"></div>
     <div class="titulo-destaque">
@@ -340,6 +321,27 @@
               <div class="item">
                 <span>MEIA</span>
                 <span class="valor">45,00</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div id="manta"></div>
+      <div class="item_container">
+        <h2>Manta Recheada</h2>
+        <div class="item-card">
+          <ul class="items">
+            <li>
+              <div class="item">
+                <div>
+                  <a data-bs-toggle="modal" data-bs-target="#md-manta">
+                    <i class="bi bi-camera-fill"></i>
+                    <span>Manta Recheada</span>
+                  </a>
+                  <p>Recheio: Muçarela com alho poró, queijo coalho, cheddar e queijo canastra. Acompanha batata frita!</p>
+                </div>
+                <span class="valor">60,00</span>
               </div>
             </li>
           </ul>
@@ -872,6 +874,16 @@
             </li>
             <li>
               <div class="item">
+                <span>Taça de churros</span>
+                <span class="valor"></span>
+              </div>
+              <p>
+                4 minis churros afogados em uma imensidão de sabor de sua
+                preferência * Doce de Leite ou Nutella *
+              </p>
+            </li>
+            <li>
+              <div class="item">
                 <span>Doce de Leite</span>
                 <span class="valor">9,00</span>
               </div>
@@ -881,16 +893,6 @@
                 <span>Nutella</span>
                 <span class="valor">14,00</span>
               </div>
-            </li>
-            <li>
-              <div class="item">
-                <span>Taça de churros</span>
-                <span class="valor"></span>
-              </div>
-              <p>
-                4 minis churros afogados em uma imensidão de sabor de sua
-                preferência
-              </p>
             </li>
           </ul>
         </div>
@@ -1200,13 +1202,6 @@
             </li>
             <li>
               <div class="item">
-                <span>Aperol Spritz</span>
-                <span class="valor">25,00</span>
-              </div>
-              <p>Aperol prosseco ou água com gás e laranja</p>
-            </li>
-            <li>
-              <div class="item">
                 <span>Caipirinha Limão</span>
                 <span class="valor">15,00</span>
               </div>
@@ -1332,51 +1327,51 @@
             <p class="mt-4 fs-4">VODKA</p>
             <li>
               <div class="item">
-                <span>Absolut + 6 Red Bull</span>
+                <span>Absolut + 5 Red Bull</span>
                 <span class="valor">240,00</span>
               </div>
             </li>
             <li>
               <div class="item">
-                <span>Smirnoff + 6 Red Bull</span>
+                <span>Smirnoff + 5 Red Bull</span>
                 <span class="valor">180,00</span>
               </div>
             </li>
             <li>
               <p class="mt-5 fs-4">WHISKY</p>
               <div class="item">
-                <span>Black Label + 6 red bull</span>
+                <span>Black Label + 5 red bull</span>
                 <span class="valor">320,00</span>
               </div>
             </li>
             <li>
               <div class="item">
-                <span>Red Label + 6 Red bull</span>
+                <span>Red Label + 5 Red bull</span>
                 <span class="valor">240,00</span>
               </div>
             </li>
             <li>
               <div class="item">
-                <span>Gold Label + 6 Red bull</span>
+                <span>Gold Label + 5 Red bull</span>
                 <span class="valor">420,00</span>
               </div>
             </li>
             <li>
               <p class="mt-5 fs-4">GIN</p>
               <div class="item">
-                <span>Gordon's + 6 Red bull</span>
-                <span class="valor">220,00</span>
+                <span>Rock's + 5 Red bull</span>
+                <span class="valor">180,00</span>
               </div>
             </li>
             <li>
               <div class="item">
-                <span>Bombay + 6 red bull</span>
+                <span>Bombay + 5 red bull</span>
                 <span class="valor">320,00</span>
               </div>
             </li>
             <li>
               <div class="item">
-                <span>Tanqueray + 6 Red bull</span>
+                <span>Tanqueray + 5 Red bull</span>
                 <span class="valor">320,00</span>
               </div>
             </li>
@@ -1747,6 +1742,28 @@
             ></button>
           </div>
           <img src="/assets/photo/bolinho-feijoada.png" alt="" />
+        </div>
+      </div>
+    </div>
+
+    <!-- manta recheada -->
+    <div
+      class="modal fade"
+      tabindex="-1"
+      id="md-manta"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <img src="/assets/photo/manta.jpg" alt="" />
         </div>
       </div>
     </div>
