atualizar descrição manta

--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
       <div id="manta"></div>
       <div class="item_container">
         <h2>Manta Recheada</h2>
+        <p>Acompanha Batata frita</p>
         <div class="item-card">
           <ul class="items">
             <li>
@@ -339,9 +340,15 @@
                     <i class="bi bi-camera-fill"></i>
                     <span>Manta Recheada</span>
                   </a>
-                  <p>Recheio: Muçarela com alho poró, queijo coalho, cheddar e queijo canastra. Acompanha batata frita!</p>
                 </div>
                 <span class="valor">60,00</span>
+              </div>
+              <p class="my-2">Escolha uma das seguintes opções de recheio:</p>
+              <div class="d-flex flex-column">
+                <span class="mb-2">* Muçarela com alho poró</span>
+                <span class="mb-2">* Queijo coalho</span>
+                <span class="mb-2">* Cheddar</span>
+                <span class="mb-2">* Queijo canastra</span>
               </div>
             </li>
           </ul>
@@ -528,10 +535,10 @@
 
       <div id="caldododia"></div>
       <div class="item_container">
-          <a data-bs-toggle="modal" data-bs-target="#md-caldo">
-            <h2>CALDO DO DIA</h2>
-            <i class="bi bi-camera-fill"></i>
-          </a>
+        <a data-bs-toggle="modal" data-bs-target="#md-caldo">
+          <h2>CALDO DO DIA</h2>
+          <i class="bi bi-camera-fill"></i>
+        </a>
         <div class="item-card">
           <ul class="items">
             <li>
@@ -543,7 +550,7 @@
             <li>
               <div class="item">
                 <span>Grande</span>
-                <span class="valor">18,00</span>
+                <span class="valor">20,00</span>
               </div>
             </li>
           </ul>
@@ -1261,7 +1268,7 @@
             </li>
             <li>
               <div class="item">
-                <span>Marquerita</span>
+                <span>Marguerita</span>
                 <span class="valor">20,00</span>
               </div>
               <p>Suco de Limão, tequila gold e licor de laranja</p>
@@ -1747,12 +1754,7 @@
     </div>
 
     <!-- manta recheada -->
-    <div
-      class="modal fade"
-      tabindex="-1"
-      id="md-manta"
-      aria-hidden="true"
-    >
+    <div class="modal fade" tabindex="-1" id="md-manta" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
